# ProjectsInCpp

./: README.md
BackupImage/include/: File.h
BackupImage/src/: File.cpp  TextFile.cpp
FactoryMethod/: main.cpp
FactoryMethod/core/: Creator.cpp
FactoryMethod/creators/: ConcreteCreator2.cpp  ConcreteCreator2.h
FactoryMethod/products/: ConcreteProduct1.cpp  ConcreteProduct1.h  ConcreteProduct2.cpp
ProjectsInCpp/BackupImage/: main.cpp
ProjectsInCpp/BackupImage/include/: TextFile.h
ProjectsInCpp/FactoryMethod/: CMakeLists.txt  README.md
ProjectsInCpp/FactoryMethod/core/: Creator.h  Product.cpp  Product.h
ProjectsInCpp/FactoryMethod/creators/: ConcreteCreator1.cpp  ConcreteCreator1.h
ProjectsInCpp/FactoryMethod/products/: ConcreteProduct2.h
ProjectsInCpp/FactoryMethod/utils/: ClientCode.cpp  ClientCode.h
